// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/page-header/demo/actions.md correctly 1`] = `
<div>
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-back"
      >
        <div
          aria-label="Back"
          class="ant-page-header-back-button"
          role="button"
          style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
          tabindex="0"
        >
          <i
            aria-label="icon: arrow-left"
            class="anticon anticon-arrow-left"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="arrow-left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 0 0 0 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </i>
        </div>
      </div>
      <span
        class="ant-page-header-heading-title"
      >
        Title
      </span>
      <span
        class="ant-page-header-heading-sub-title"
      >
        This is a subtitle
      </span>
      <span
        class="ant-page-header-heading-extra"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </span>
    </div>
    <div
      class="ant-page-header-content"
    >
      <div
        class="ant-descriptions ant-descriptions-small"
      >
        <div
          class="ant-descriptions-view"
        >
          <table>
            <tbody>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <span
                    class="ant-descriptions-item-label ant-descriptions-item-colon"
                  >
                    Created
                  </span>
                  <span
                    class="ant-descriptions-item-content"
                  >
                    Lili Qu
                  </span>
                </td>
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <span
                    class="ant-descriptions-item-label ant-descriptions-item-colon"
                  >
                    Association
                  </span>
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <a>
                      421421
                    </a>
                  </span>
                </td>
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <span
                    class="ant-descriptions-item-label ant-descriptions-item-colon"
                  >
                    Creation Time
                  </span>
                  <span
                    class="ant-descriptions-item-content"
                  >
                    2017-01-10
                  </span>
                </td>
              </tr>
              <tr
                class="ant-descriptions-row"
              >
                <td
                  class="ant-descriptions-item"
                  colspan="1"
                >
                  <span
                    class="ant-descriptions-item-label ant-descriptions-item-colon"
                  >
                    Effective Time
                  </span>
                  <span
                    class="ant-descriptions-item-content"
                  >
                    2017-10-10
                  </span>
                </td>
                <td
                  class="ant-descriptions-item"
                  colspan="2"
                >
                  <span
                    class="ant-descriptions-item-label ant-descriptions-item-colon"
                  >
                    Remarks
                  </span>
                  <span
                    class="ant-descriptions-item-content"
                  >
                    Gonghu Road, Xihu District, Hangzhou, Zhejiang, China
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    class="ant-page-header"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-back"
      >
        <div
          aria-label="Back"
          class="ant-page-header-back-button"
          role="button"
          style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
          tabindex="0"
        >
          <i
            aria-label="icon: arrow-left"
            class="anticon anticon-arrow-left"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="arrow-left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 0 0 0 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </i>
        </div>
      </div>
      <span
        class="ant-page-header-heading-title"
      >
        Title
      </span>
      <span
        class="ant-page-header-heading-sub-title"
      >
        This is a subtitle
      </span>
      <span
        class="ant-page-header-heading-tags"
      >
        <span
          class="ant-tag ant-tag-blue"
        >
          Running
        </span>
      </span>
      <span
        class="ant-page-header-heading-extra"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </span>
    </div>
    <div
      class="ant-page-header-content"
    >
      <div
        class="ant-row-flex"
      >
        <div
          class="ant-statistic"
        >
          <div
            class="ant-statistic-title"
          >
            Status
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-value"
            >
              Pending
            </span>
          </div>
        </div>
        <div
          class="ant-statistic"
          style="margin:0 32px"
        >
          <div
            class="ant-statistic-title"
          >
            Price
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-prefix"
            >
              $
            </span>
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                568
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .08
              </span>
            </span>
          </div>
        </div>
        <div
          class="ant-statistic"
        >
          <div
            class="ant-statistic-title"
          >
            Balance
          </div>
          <div
            class="ant-statistic-content"
          >
            <span
              class="ant-statistic-content-prefix"
            >
              $
            </span>
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                3,345
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .08
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/basic.md correctly 1`] = `
<div
  class="ant-page-header"
>
  <div
    class="ant-page-header-heading"
  >
    <div
      class="ant-page-header-back"
    >
      <div
        aria-label="Back"
        class="ant-page-header-back-button"
        role="button"
        style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
        tabindex="0"
      >
        <i
          aria-label="icon: arrow-left"
          class="anticon anticon-arrow-left"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="arrow-left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 0 0 0 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </i>
      </div>
    </div>
    <span
      class="ant-page-header-heading-title"
    >
      Title
    </span>
    <span
      class="ant-page-header-heading-sub-title"
    >
      This is a subtitle
    </span>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/breadcrumb.md correctly 1`] = `
<div
  class="ant-page-header has-breadcrumb"
>
  <div
    class="ant-breadcrumb"
  >
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index"
        >
          First-level Menu
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index/first"
        >
          Second-level Menu
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <span>
          Third-level Menu
        </span>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>
  <div
    class="ant-page-header-heading"
  >
    <span
      class="ant-page-header-heading-title"
    >
      Title
    </span>
    <span
      class="ant-page-header-heading-sub-title"
    >
      This is a subtitle
    </span>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/content.md correctly 1`] = `
<div
  class="ant-page-header has-breadcrumb"
>
  <div
    class="ant-breadcrumb"
  >
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index"
        >
          First-level Menu
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index/first"
        >
          Second-level Menu
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <span>
          Third-level Menu
        </span>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>
  <div
    class="ant-page-header-heading"
  >
    <span
      class="ant-avatar ant-avatar-circle ant-avatar-image"
    >
      <img
        src="https://avatars1.githubusercontent.com/u/8186664?s=460&v=4"
      />
    </span>
    <span
      class="ant-page-header-heading-title"
    >
      Title
    </span>
    <span
      class="ant-page-header-heading-sub-title"
    >
      This is a subtitle
    </span>
    <span
      class="ant-page-header-heading-tags"
    >
      <span
        class="ant-tag ant-tag-blue"
      >
        Running
      </span>
    </span>
    <span
      class="ant-page-header-heading-extra"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Operation
        </span>
      </button>
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Operation
        </span>
      </button>
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Primary
        </span>
      </button>
      <button
        class="ant-btn ant-dropdown-trigger"
        style="border:none;padding:0"
        type="button"
      >
        <i
          aria-label="icon: ellipsis"
          class="anticon anticon-ellipsis"
          style="font-size:20px;vertical-align:top"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm280 0a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm280 0a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
            />
          </svg>
        </i>
      </button>
    </span>
  </div>
  <div
    class="ant-page-header-content"
  >
    <div
      class="ant-row-flex content"
    >
      <div
        class="main"
        style="flex:1"
      >
        <div
          class="content"
        >
          <div
            class="ant-typography"
          >
            Ant Design interprets the color system into two levels: a system-level color system and a product-level color system.
          </div>
          <div
            class="ant-typography"
          >
            Ant Design's design team preferred to design with the HSB color model, which makes it easier for designers to have a clear psychological expectation of color when adjusting colors, as well as facilitate communication in teams.
          </div>
          <div
            class="ant-row-flex contentLink"
          >
            <a
              style="margin-right:16px;display:flex;align-items:center"
            >
              <img
                alt="start"
                src="https://gw.alipayobjects.com/zos/rmsportal/MjEImQtenlyueSmVEfUD.svg"
                style="margin-right:8px"
              />
              Quick Start
            </a>
            <a
              style="margin-right:16px;display:flex;align-items:center"
            >
              <img
                alt="start"
                src="https://gw.alipayobjects.com/zos/rmsportal/NbuDUAuBlIApFuDvWiND.svg"
                style="margin-right:8px"
              />
               Product Info
            </a>
            <a
              style="margin-right:16px;display:flex;align-items:center"
            >
              <img
                alt="start"
                src="https://gw.alipayobjects.com/zos/rmsportal/ohOEPSYdDTNnyMbGuyLb.svg"
                style="margin-right:8px"
              />
              Product Doc
            </a>
          </div>
        </div>
      </div>
      <div
        class="extra"
        style="margin-left:80px"
      >
        <img
          alt="content"
          src="https://gw.alipayobjects.com/mdn/mpaas_user/afts/img/A*KsfVQbuLRlYAAAAAAAAAAABjAQAAAQ/original"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/responsive.md correctly 1`] = `
<div>
  <div
    class="ant-page-header has-footer"
  >
    <div
      class="ant-page-header-heading"
    >
      <div
        class="ant-page-header-back"
      >
        <div
          aria-label="Back"
          class="ant-page-header-back-button"
          role="button"
          style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
          tabindex="0"
        >
          <i
            aria-label="icon: arrow-left"
            class="anticon anticon-arrow-left"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="arrow-left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 0 0 0 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </i>
        </div>
      </div>
      <span
        class="ant-page-header-heading-title"
      >
        Title
      </span>
      <span
        class="ant-page-header-heading-sub-title"
      >
        This is a subtitle
      </span>
      <span
        class="ant-page-header-heading-extra"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Operation
          </span>
        </button>
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </span>
    </div>
    <div
      class="ant-page-header-content"
    >
      <div
        class="content"
      >
        <div
          class="main"
        >
          <div
            class="ant-descriptions ant-descriptions-small"
          >
            <div
              class="ant-descriptions-view"
            >
              <table>
                <tbody>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="1"
                    >
                      <span
                        class="ant-descriptions-item-label ant-descriptions-item-colon"
                      >
                        Created
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        Lili Qu
                      </span>
                    </td>
                    <td
                      class="ant-descriptions-item"
                      colspan="1"
                    >
                      <span
                        class="ant-descriptions-item-label ant-descriptions-item-colon"
                      >
                        Association
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        <a>
                          421421
                        </a>
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="1"
                    >
                      <span
                        class="ant-descriptions-item-label ant-descriptions-item-colon"
                      >
                        Creation Time
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        2017-01-10
                      </span>
                    </td>
                    <td
                      class="ant-descriptions-item"
                      colspan="1"
                    >
                      <span
                        class="ant-descriptions-item-label ant-descriptions-item-colon"
                      >
                        Effective Time
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        2017-10-10
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="2"
                    >
                      <span
                        class="ant-descriptions-item-label ant-descriptions-item-colon"
                      >
                        Remarks
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        Gonghu Road, Xihu District, Hangzhou, Zhejiang, China
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div
          class="extra"
        >
          <div
            style="display:flex;width:max-content;justify-content:flex-end"
          >
            <div
              class="ant-statistic"
              style="margin-right:32px"
            >
              <div
                class="ant-statistic-title"
              >
                Status
              </div>
              <div
                class="ant-statistic-content"
              >
                <span
                  class="ant-statistic-content-value"
                >
                  Pending
                </span>
              </div>
            </div>
            <div
              class="ant-statistic"
            >
              <div
                class="ant-statistic-title"
              >
                Price
              </div>
              <div
                class="ant-statistic-content"
              >
                <span
                  class="ant-statistic-content-prefix"
                >
                  $
                </span>
                <span
                  class="ant-statistic-content-value"
                >
                  <span
                    class="ant-statistic-content-value-int"
                  >
                    568
                  </span>
                  <span
                    class="ant-statistic-content-value-decimal"
                  >
                    .08
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-page-header-footer"
    >
      <div
        class="ant-tabs ant-tabs-top ant-tabs-line"
      >
        <div
          class="ant-tabs-bar ant-tabs-top-bar"
          role="tablist"
          tabindex="0"
        >
          <div
            class="ant-tabs-nav-container"
          >
            <span
              class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-prev-icon"
              >
                <i
                  aria-label="icon: left"
                  class="anticon anticon-left ant-tabs-tab-prev-icon-target"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </i>
              </span>
            </span>
            <span
              class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="ant-tabs-tab-next-icon"
              >
                <i
                  aria-label="icon: right"
                  class="anticon anticon-right ant-tabs-tab-next-icon-target"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                    />
                  </svg>
                </i>
              </span>
            </span>
            <div
              class="ant-tabs-nav-wrap"
            >
              <div
                class="ant-tabs-nav-scroll"
              >
                <div
                  class="ant-tabs-nav ant-tabs-nav-animated"
                >
                  <div>
                    <div
                      aria-disabled="false"
                      aria-selected="true"
                      class="ant-tabs-tab-active ant-tabs-tab"
                      role="tab"
                    >
                      Details
                    </div>
                    <div
                      aria-disabled="false"
                      aria-selected="false"
                      class=" ant-tabs-tab"
                      role="tab"
                    >
                      Rule
                    </div>
                  </div>
                  <div
                    class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        <div
          class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
          style="margin-left:0%"
        >
          <div
            aria-hidden="false"
            class="ant-tabs-tabpane ant-tabs-tabpane-active"
            role="tabpanel"
          >
            <div
              role="presentation"
              style="width:0;height:0;overflow:hidden;position:absolute"
              tabindex="0"
            />
            <div
              role="presentation"
              style="width:0;height:0;overflow:hidden;position:absolute"
              tabindex="0"
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
            role="tabpanel"
          />
        </div>
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;
